# Localizzazione-Cooperativa-Multi-Robot-con-EKF

./: CMakeLists.txt  build_package.sh  covariance_history.csv  package.xml
include/: data_loader.h  ekf_centralized.h  groundtruth_loader.h
launch/: cooperative_localization_launch.py
src/: centralized_node.cpp  data_loader.cpp  ekf_centralized.cpp  evaluate_accuracy.cpp  groundtruth_loader.cpp  robot_node.cpp  test_dataset.cpp
